vpc/subnets.tf
resource "aws_subnet" "public_1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = local.public_subnet_cidr1
  availability_zone       = "${local.region}a"
  map_public_ip_on_launch = true

  tags = {
    Project = "${local.project_name}"
    Name    = "The First Public Subent"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = local.public_subnet_cidr2
  availability_zone       = "${local.region}b"
  map_public_ip_on_launch = true

  tags = {
    Project = "${local.project_name}"
    Name    = "The Second Public Subent"
  }
}


resource "aws_subnet" "private" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = local.private_subnet_cidr
  availability_zone       = "${local.region}b"
  map_public_ip_on_launch = false

  tags = {
    Project = "${local.project_name}"
    Name    = "Private Subent"
  }
}

output "public_subnet_id_1" {
  value = aws_subnet.public_1.id
}

output "public_subnet_id_2" {
  value = aws_subnet.public_2.id
}

output "private_subnet_id" {
  value = aws_subnet.private.id
}
